tests/baselines/reference/objectTypeLiteralSyntax2.errors.txt
tests/cases/conformance/types/objectTypeLiteral/objectTypeLiteralSyntax2.ts(12,22): error TS1005: '=' expected.
tests/cases/conformance/types/objectTypeLiteral/objectTypeLiteralSyntax2.ts(12,22): error TS2304: Cannot find name 'bar'.
tests/cases/conformance/types/objectTypeLiteral/objectTypeLiteralSyntax2.ts(12,25): error TS1005: ';' expected.


==== tests/cases/conformance/types/objectTypeLiteral/objectTypeLiteralSyntax2.ts (3 errors) ====
    var x: {
        foo: string,
        bar: string
    }
    
    // ASI makes this work
    var y: {
        foo: string
        bar: string
    }
    
    var z: { foo: string bar: string }
                         ~~~
!!! error TS1005: '=' expected.
                         ~~~
!!! error TS2304: Cannot find name 'bar'.
                            ~
!!! error TS1005: ';' expected.